# BeybladeX-Database

./: .env.example  .gitignore  ANSIBLE_PROMPT.md  CLAUDE.md  DEPLOYMENT.md  PLAN.md  README.md  bookmarklet.txt  docker-compose.yml  pyproject.toml
.github/workflows/: rebuild.yml
data/: championships.json
docker/: Dockerfile.api  Dockerfile.web  api-entrypoint.sh  api_server.py  nginx.conf  traefik-config.yml  web-entrypoint.sh
scripts/: __init__.py  analysis.py  api_server_standalone.py  base_scraper.py  bookmarklet_homelab.js  db.py  de_scraper.py  fix_typos.py  import_browser_json.py  import_championships.py  import_wbo_json.py  jp_scraper.py  parts_seed.py  refresh_all.py  requirements.txt  scraper.py  translations.py  wbo_bookmarklet.js  wbo_console.js  wbo_downloader.py  wbo_playwright.py  wbo_scraper_manual.py  wbo_scraper_windows.py
scripts/scrapers/: __init__.py  de.py  jp.py  wbo.py
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/public/: _headers
site/src/components/: BladeCard.astro  ComboCard.astro  ComparePanel.astro  Navigation.astro  RankingTable.astro  RegionFilter.astro  TrendIndicator.astro
site/src/layouts/: Layout.astro
site/src/lib/: animations.ts  db.ts  sparkline.ts
site/src/pages/: assist.astro  bits.astro  blades.astro  combos.astro  index.astro  lockchips.astro  methodology.astro  projections.astro  ratchets.astro  tools.astro
site/src/styles/: global.css
