[project]
name = "beybladex-database"
version = "0.1.0"
description = "Beyblade X tournament meta analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.66.0",
    "playwright>=1.40.0",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.14.0",
    "playwright-stealth>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
